force-app/main/default/objects/Project_ID__c/Project_ID__c.object-meta.xml
<CustomObject>
    <label>Project ID</label>
    <nameField>
        <displayFormat>PID-{0000}</displayFormat>
        <label>Project ID Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project IDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>