force-app/main/default/objects/Project_ID__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Project IDs</relationshipLabel>
    <relationshipName>Project_IDs</relationshipName>
    <type>Lookup</type>
</CustomField>