force-app/main/default/objects/Project_ID__c/fields/Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID__c</fullName>
    <label>Opportunity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>