force-app/main/default/objects/Project_ID__c/fields/Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Project IDs</relationshipLabel>
    <relationshipName>Project_IDs</relationshipName>
    <type>Lookup</type>
</CustomField>