force-app/main/default/objects/Project_ID__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Opportunity_ID__c</columns>
    <columns>Opportunity_Product__c</columns>
    <columns>Project_ID__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Sequence__c</columns>
    <columns>Year__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>