force-app/main/default/objects/Project_ID__c/listViews/Created_Last_7_Days.listView-meta.xml
<ListView>
    <fullName>Created_Last_7_Days</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Opportunity_ID__c</columns>
    <columns>Opportunity_Product__c</columns>
    <columns>Project_ID__c</columns>
    <columns>Sequence__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Year__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Created Last 7 Days</label>
</ListView>